--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Sample_AndroidTest</string>
+    <string name="hello_espresso">hello espresso!</string>
 </resources>
